<resources>
    <string name="app_name">Project Cero</string>
    <string name="main_title">My NanoDegree Apps!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="football_scores">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="clickInfo">This button will launch the </string>

</resources>
