<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >


    <TextView
        android:layout_width="@dimen/main_title_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:text="@string/main_title"
        android:id="@+id/textView2"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin">


        <Button
            android:layout_width="@dimen/main_button_width"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer"
            android:id="@+id/buttonSpotifyStreamer"
            android:layout_gravity="center_horizontal"
            android:onClick="onAppSelected"
            style="@style/main_button_style" />
        <Button
            android:layout_width="@dimen/main_button_width"
            android:layout_height="wrap_content"
            android:text="@string/football_scores"
            android:id="@+id/buttonFootballScores"
            android:layout_gravity="center_horizontal"
            android:onClick="onAppSelected"
            style="@style/main_button_style" />
        <Button
            android:layout_width="@dimen/main_button_width"
            android:layout_height="wrap_content"
            android:text="@string/library_app"
            android:id="@+id/buttonLibraryApp"
            android:layout_gravity="center_horizontal"
            android:onClick="onAppSelected"
            style="@style/main_button_style" />

        <Button
            android:layout_width="@dimen/main_button_width"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger"
            android:id="@+id/buttonBuildItBigger"
            android:layout_gravity="center_horizontal"
            android:onClick="onAppSelected"
            style="@style/main_button_style" />
        <Button
            android:layout_width="@dimen/main_button_width"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader"
            android:id="@+id/buttonXYZReader"
            android:layout_gravity="center_horizontal"
            android:onClick="onAppSelected"
            style="@style/main_button_style" />
        <Button
            android:layout_width="@dimen/main_button_width"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:id="@+id/buttonCapStone"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_horizontal"
            android:onClick="onAppSelected"
            style="@style/main_button_style" />
    </LinearLayout>

</LinearLayout>
